include_directories(../../Source)
include_directories(../../ThirdParty/Math/include)
include_directories(../../ThirdParty/glad/include)
include_directories(../../ThirdParty/glfw/include)
include_directories(../../ThirdParty/assimp/include)
include_directories(../../ThirdParty/glslang/include)
include_directories(../../ThirdParty/meshoptimizer/include)
include_directories(../../ThirdParty/shaderc/include)
include_directories(../../ThirdParty/SPIRV-Headers/include)
include_directories(../../ThirdParty/SPIRV-Tools/include)
include_directories(../../ThirdParty/stb/include)
include_directories(../../ThirdParty/Vulkan-Headers/include)
include_directories(../../ThirdParty/Vulkan-Headers/include)

add_executable(main main.cpp)
